dataset1235/2025-2/1153765216/users/3700556413/executions/2814675586_2403290319.log
== RUN (2025-08-26 18:14:23)
-- CODE: 
preco = int(input("digite o preco unitario: "))
quantidade = int(input("digite a quantidade desejada: "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input("digite o preco unitario: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input("digite o preco unitario: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input("digite o preco unitario: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input("digite o preco unitario: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input("digite o preco unitario: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input("digite o preco unitario: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:03:09)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = float(input("digite a quantidade desejada: "))
valor_total = preco + quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:56:24)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = float(input("digite a quantidade desejada: "))
valor_total = (preco + quantidade)
print(valor_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:28:11)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = float(input("digite a quantidade desejada: "))

valor_total = preco + quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:27:46)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = int(input("digite a quantidade desejada: "))

valo_total = preco + quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(valor_total)
          ^^^^^^^^^^^
NameError: name 'valor_total' is not defined. Did you mean: 'valo_total'?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(valor_total)
          ^^^^^^^^^^^
NameError: name 'valor_total' is not defined. Did you mean: 'valo_total'?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(valor_total)
          ^^^^^^^^^^^
NameError: name 'valor_total' is not defined. Did you mean: 'valo_total'?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(valor_total)
          ^^^^^^^^^^^
NameError: name 'valor_total' is not defined. Did you mean: 'valo_total'?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(valor_total)
          ^^^^^^^^^^^
NameError: name 'valor_total' is not defined. Did you mean: 'valo_total'?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(valor_total)
          ^^^^^^^^^^^
NameError: name 'valor_total' is not defined. Did you mean: 'valo_total'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:14:21)
-- CODE: 
preco = int(input("digite o preco unitario: "))
quantidade = int(input("digite a quantidade desejada: "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input("digite o preco unitario: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input("digite o preco unitario: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input("digite o preco unitario: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input("digite o preco unitario: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input("digite o preco unitario: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input("digite o preco unitario: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:50:34)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = float(input("digite a quantidade desejada: "))
valor_total = preco + quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:27:52)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = int(input("digite a quantidade desejada: "))

valor_total = preco + quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:28:12)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = float(input("digite a quantidade desejada: "))

valor_total = preco + quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:28:11)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = float(input("digite a quantidade desejada: "))

valor_total = preco + quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:50:31)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = float(input("digite a quantidade desejada: "))
valor_total = preco + quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:51:44)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = float(input("digite a quantidade desejada: "))
valor_total = preco + quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:28:18)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = float(input("digite a quantidade desejada: "))

valor_total = preco + quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:10:42)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = int(input("digite a quantidade desejada: "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:13:26)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = int(input("digite a quantidade desejada: "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:28:09)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = float(input("digite a quantidade desejada: "))

valor_total = preco + quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:26:55)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = int(input("digite a quantidade desejada: "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:06:51)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = int(input("digite a quantidade desejada: "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:21:07)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = float(input("digite a quantidade desejada: "))
valor_total = preco * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 350.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:27:54)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = int(input("digite a quantidade desejada: "))

valor_total = preco + quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:11:10)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = int(input("digite a quantidade desejada: "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:06:53)
-- CODE: 
preco = float(input("digite o preco unitario: "))
quantidade = int(input("digite a quantidade desejada: "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preco unitario: digite a quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preco unitario: digite a quantidade desejada: 91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
